force-app/main/default/objects/KimbleOne__InvoicePreference__c/KimbleOne__InvoicePreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Invoice Preference</label>
</CustomObject>