force-app/main/default/objects/KimbleOne__InvoicePreference__c/fields/KimbleOne__CanDeleteRevertedInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanDeleteRevertedInvoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Delete Reverted Invoice</label>
    <type>Checkbox</type>
</CustomField>