force-app/main/default/objects/KimbleOne__InvoicePreference__c/fields/KimbleOne__CanEditInClosedPeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanEditInClosedPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit In Closed Period</label>
    <type>Checkbox</type>
</CustomField>