force-app/main/default/objects/KimbleOne__InvoicePreference__c/fields/KimbleOne__CanIncludeAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanIncludeAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Include Adjustment</label>
    <type>Checkbox</type>
</CustomField>