force-app/main/default/objects/KimbleOne__InvoicePreference__c/fields/KimbleOne__CanIncludeDeposits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanIncludeDeposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Include Deposits</label>
    <type>Checkbox</type>
</CustomField>